--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <p>&#169; CarpoolVenom All Right Reserved</p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="fruit.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
